<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/incluce_common_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/linkus_telnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_28"
            android:text="@string/linkue_tel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:text="@string/linkue_hottel" />
    </LinearLayout>

    <TextView
        android:id="@+id/linkus_call"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/space_50"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginRight="@dimen/space_20"
        android:background="@drawable/textview_round2"
        android:gravity="center"
        android:text="@string/linkue_call"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18" />

</RelativeLayout>
