<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/incluce_common_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addjobinfo_choicejobtype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_40"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/new_input_line"
                android:gravity="center|left"
                android:hint="@string/addjobexperience_choicejobtype"
                android:paddingLeft="@dimen/space_20"
                android:singleLine="true"
                android:textSize="@dimen/font_size_14" />

            <EditText
                android:id="@+id/addjobinfo_inputjobtype"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_40"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/new_input_line"
                android:hint="@string/addjobexperience_inputjobtype"
                android:paddingLeft="@dimen/space_20"
                android:singleLine="true"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:id="@+id/addjobinfo_worktime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_40"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/new_input_line"
                android:gravity="center|left"
                android:hint="@string/addjobexperience_worktime"
                android:paddingLeft="@dimen/space_20"
                android:singleLine="true"
                android:textSize="@dimen/font_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20"
                android:text="@string/addjobexperience_jobdescribe"
                android:textColor="@color/color_666666_gray" />

            <EditText
                android:id="@+id/addjobinfo_contant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:layout_marginTop="@dimen/space_10"
                android:background="@drawable/new_myreume_selfassessment"
                android:gravity="left|top"
                android:hint="@string/pleaseinput"
                android:maxLength="200"
                android:maxLines="200"
                android:paddingLeft="@dimen/space_10"
                android:paddingRight="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
                android:textSize="@dimen/font_size_14" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/space_20">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caninput"
                        android:textColor="@color/color_b4b4b4_gray"
                        android:textSize="@dimen/font_size_12" />

                    <TextView
                        android:id="@+id/addjobinfo_wordnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="200"
                        android:textColor="@color/color_E14222"
                        android:textSize="@dimen/font_size_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/words"
                        android:textColor="@color/color_b4b4b4_gray"
                        android:textSize="@dimen/font_size_12" />
                </LinearLayout>

                <TextView
                    android:id="@+id/addjobinfo_clean"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/space_20"
                    android:background="@drawable/new_myresume_clean" />
            </RelativeLayout>

            <TextView
                android:id="@+id/addjobinfo_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginLeft="@dimen/space_20"
                android:layout_marginRight="@dimen/space_20"
                android:layout_marginTop="@dimen/space_20"
                android:background="@drawable/textview_round2"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_18" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
